Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
cb4f6f012 (dev), 2ac200062 (6.8)
Description
An empty label appears at the middle of the graph when toggling labels on and off.
Reproducible in tst_qmltheme: Toggle Labels parameter on and off in background modifiers.
Attachments
For Gerrit Dashboard: QTBUG-126269 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
567909,2 | Add item selected check for item label visibilty | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
568252,2 | Add item selected check for item label visibilty | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |