Add item selected check for item label visibilty

Fixes: QTBUG-126269
Change-Id: Ibada245167316587462f0c1c85838b0151859dd5
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
(cherry picked from commit cb4f6f012586dc7aaa040f8aca6556a9982a5dbe)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>